--- a/templates/PharmacySignIn.html
+++ b/templates/PharmacySignIn.html
@@ -1,29 +1,27 @@
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ilac Sepeti</title>
-	<link rel="stylesheet" href={{ url_for('static', filename='UI/CsWelcomePage.css')}}>
+	<link rel="stylesheet" type="text/css" href="../UI/CsWelcomePage.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
   </head><!DOCTYPE html>
 <html>
 <head>
 	<title>Ilac Sepeti</title>
-	<link rel="stylesheet" href={{ url_for('static', filename='UI/CsWelcomePage.css')}}>
+	<link rel="stylesheet" type="text/css" href="../UI/CsWelcomePage.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container"> 
         <div class="header">
             <h1 class="headerName">İLAÇ SEPETİ'NE HOŞGELDİNİZ</h1>
-            <h3 class="signHeader"></h3>
+            <h3 class="status">Eczane girişi</h3>
         </div>
         <div class="main">  	
             <input type="checkbox" id="chk" aria-hidden="true">
                 <div class="signup">
                     <form>
                         <label for="chk" aria-hidden="true">Üye Ol</label>
-                        <input type="name" name="name" placeholder="İsim Soyisim" required="">
+                        <input type="text" name="txt" placeholder="İsim Soyisim" required="">
                         <input type="number" name="tc" placeholder="TC No" required="">
                         <input type="number" name="phone" placeholder="Telefon Numarası" required="">
                         <input type="email" name="email" placeholder="Email" required="">
