--- a/templates/PharmacyWHSignIn.html
+++ b/templates/PharmacyWHSignIn.html
@@ -1,15 +1,13 @@
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ilac Sepeti</title>
-	<link rel="stylesheet" href={{ url_for('static', filename='UI/CsWelcomePage.css')}}>
+	<link rel="stylesheet" type="text/css" href="../UI/CsWelcomePage.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
   </head><!DOCTYPE html>
 <html>
 <head>
 	<title>Ilac Sepeti</title>
-	<link rel="stylesheet" href={{ url_for('static', filename='UI/CsWelcomePage.css')}}>
+	<link rel="stylesheet" type="text/css" href="../UI/CsWelcomePage.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -23,7 +21,7 @@
                 <div class="signup">
                     <form>
                         <label for="chk" aria-hidden="true">Üye Ol</label>
-                        <input type="name" name="name" placeholder="İsim Soyisim" required="">
+                        <input type="text" name="txt" placeholder="İsim Soyisim" required="">
                         <input type="number" name="tc" placeholder="TC No" required="">
                         <input type="number" name="phone" placeholder="Telefon Numarası" required="">
                         <input type="email" name="email" placeholder="Email" required="">
