--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,28 @@
-<!DOCTYPE html>
 <html>
-
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Ilac Sepeti</title>
+	<link rel="stylesheet" href={{ url_for('static', filename='UI/CsIndex.css')}}>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+  </head><!DOCTYPE html>
+<html>
 <head>
-    <!-- Remote style sheet -->
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-    
-    <!-- Local style sheet relative to workspace folder -->
-    <link rel="stylesheet" href="./UI/reset.css">
-
-    <!-- Local style sheet relative to this file -->
+	<title>Ilac Sepeti</title>
+	<link rel="stylesheet" href={{ url_for('static', filename='UI/CsIndex.css')}}>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <div class="container" id="content">
-        <h1 class="WelcomeHeader">İLAÇ SEPETİ'NE HOŞGELDİNİZ</h1>
-        <h3 class="WelcomeHeader">İsiminizi ve Soyisminizi girerek</h3>
-        <form action="/action_page.php" method="get">
-            <label for="fname">Adınızı Giriniz:</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="lname">Soyadınızı Giriniz:</label>
-            <input type="text" id="lname" name="lname"><br><br>
-            <label for="fname">TC kimlik numaranızı giriniz</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="fname">E-Nabız şifrenizi giriniz</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <button type="submit">Reçetemi Gör</button>
-            <button type="submit" formaction="/action_page2.php">Submit to another page</button>
-        </form>
+    <div class="container"> 
+        <div class="header">
+            <h1 class="headerName">İLAÇ SEPETİ'NE HOŞGELDİNİZ</h1>
+            <h3 class="signHeader"></h3>
+        </div>
+        <div class="main">
+         	<div class="EczaneSignIn"><a href="EczanePanel">Eczane Paneli Giriş</a></div>
+            <div class="IlacDeposuSignIn"><a href="WelcomePage">Kullanıcı Paneli Giriş</a></div>
+            <div class="KullaniciSignIn"><a href="IlacDepoPanel">İlaç Deposu Giriş</a></div> 
+        </div>
     </div>
 </body>
-
 </html>
