--- a/templates/WelcomePage.html
+++ b/templates/WelcomePage.html
@@ -19,28 +19,27 @@
         <div class="main">  	
             <input type="checkbox" id="chk" value=1 aria-hidden="true">
                 <div class="signup">
-                    <form>
+                {% block signinput %}
+                    <form action="{{ url_for('add_User')}}" method="POST">
                         <label for="chk" aria-hidden="true">Üye Ol</label>
-                        {% block signinput %}
-                            <input type="name" name="name" placeholder="İsim Soyisim" required="">
-                            <input type="number" name="tc" placeholder="TC No" required="">
-                            <input type="number" name="phone" placeholder="Telefon Numarası" required="">
-                            <input type="email" name="email" placeholder="Email" required="">
-                            <input type="password" name="pswd" placeholder="Şifre" required="">  
-                            <button type="submit" name="submit_sign_user" value="submit_sign_user">Üye Ol</button>
-                        {% endblock %}
+                        <input type="name" name="name" placeholder="İsim Soyisim" required="">
+                        <input type="number" name="tc" placeholder="TC No" required="">
+                        <input type="number" name="phone" placeholder="Telefon Numarası" required="">
+                        <input type="email" name="email" placeholder="Email" required="">
+                        <input type="password" name="pswd" placeholder="Şifre" required="">  
+                        <button class="submitButton" type="submit" name="submit_sign_user">Üye Ol</button>
                     </form>
+                {% endblock %}
                 </div>
-
                 <div class="login">
-                    <form>
-                        <label for="chk" aria-hidden="true">Giriş Yap</label>
-                        {% block logininput %}
+                    {% block logininput %}
+                        <form action="{{ url_for('Login_User')}}" method="POST">
+                            <label for="chk" aria-hidden="true">Giriş Yap</label>
                             <input type="number" name="tc" placeholder="TC No" required="">
                             <input type="password" name="pswd" placeholder="Şifre" required="">
-                        {% endblock %}
-                        <button type="submit" name="submit_log" value="submit_log">Giriş Yap</button>
-                    </form>
+                            <button class="submitButton" type="submit" name="submit_log">Giriş Yap</button>
+                        </form>
+                    {% endblock %}
                 </div>
         </div>
     </div>
