--- a/templates/UserMainPage.html
+++ b/templates/UserMainPage.html
@@ -22,7 +22,7 @@
                     <h1 class="Recipe__title">Reçete</h1>
                 </header>
                 <form method="POST">
-                    <label for="recipe" aria-hidden="true"></label>
+                    <label for="recipe" aria-hidden="true">Reçete Sorgula</label>
                     <input type="rcp" name="number" placeholder="Reçete Numarası" required="">
                     <input type="sgk" name="number" placeholder="SGK Numarası" required="">
                     <button class="submitButton" type="submit" name="">Reçete Sorgula</button>
