--- a/templates/ss.html
+++ b/templates/ss.html
@@ -1,40 +1,44 @@
-<!DOCTYPE html>
 <html>
-
 <head>
-    <!-- Remote style sheet -->
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-    
-    <!-- Local style sheet relative to workspace folder -->
-    <link rel="stylesheet" href="../UI/reset.css">
-
-    <!-- Local style sheet relative to this file -->
-    <link rel="stylesheet" href="../UI/CsWelcomePage.css">
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>İlaç Sepeti</title>
+	<link rel="stylesheet" href={{ url_for('static', filename='UI/CsPharmacistAdmin.css')}}>
+	{% block css %}
+    {% endblock %}
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <div class="container" id="content">
-        <h1 class="WelcomeHeader">İLAÇ SEPETİ'NE HOŞGELDİNİZ</h1>
-        <h3 class="WelcomeDescription">Bilgilerinizi doldurarak reçetenize ulaşabilirsiniz</h3>
-        <form action="/GetMedicine" method="POST">
-            <label for="fname">Adınızı Giriniz:</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="lname">Soyadınızı Giriniz:</label>
-            <input type="text" id="lname" name="lname"><br><br>
-            <label for="tc">TC kimlik numaranızı giriniz</label>
-            <input type="number" id="tc" name="tc"><br><br>
-            <label for="password">E-Nabız şifrenizi giriniz</label>
-            <input type="password" id="password" name="password"><br><br>
-        </form>
-        {%if message%}
-            <p class="message">{{ message | safe}}</p>
-        {% endif %}
-        <div class="SubmitButton">
-            <button type="submit" formaction="/GetMedicine">Reçetemi Gör</button>
-            <button type="submit" formaction="/GetMedicine">Submit to another page</button>
+    <div class="container"> 
+        <div class="header">
+            {% block headerName %}
+                <h3 class="signHeader"></h3>
+            {% endblock %}
+        </div>
+        <div class="main">
+            <div class="RecipeInfo">
+                <header>
+                    <h1 class="Recipe__title">Reçete</h1>
+                </header>
+                <form method="POST">
+                    <label for="recipe" aria-hidden="true">Reçete Sorgula</label>
+                    <input type="rcp" name="number" placeholder="Reçete Numarası" required="">
+                    <input type="sgk" name="number" placeholder="SGK Numarası" required="">
+                    <button class="submitButton" type="submit" name="">Reçete Sorgula</button>
+                </form>
+            </div>
+            <article class="PharmList">
+                <header>
+                    <h1 class="Pharm__title"><span class="Pharm__title--top">1111 Numaralı</span><span class="Pharm__title--bottom">Reçete</span></h1>
+                </header>
+                <main class="Pharm__profiles">
+                    <article class="Pharm__profile">-
+                    <span class="Pharm__name">Mark Zuckerberg</span>
+                    <span class="Pharm__value">35.7<span>B</span></span>
+                    </article>
+                </main>
+            </article>
         </div>
     </div>
 </body>
-
 </html>
