blueprint is added

--- a/templates/PharmacistAdmin.html
+++ b/templates/PharmacistAdmin.html
@@ -16,7 +16,7 @@
                 </header>
                 <main class="Missions">
                     <div class="Mission__profile">
-                    <form action="{{ url_for('PharmacyActions')}}" method="POST">
+                    <form action="{{ url_for('PharmacyMission.PharmacyActions')}}" method="POST">
                         <Button class="Mission__ProblemList" type="submit" name="submit_problemList" value="submit_problemList">Problemleri Gör</Button>
                         <Button class="Mission__ProblemAdd" type="submit" name="submit_problemAdd" value="submit_problemAdd">Problem Oluştur</Button>
                         <Button class="Mission__PharmList" type="submit" name="submit_PharmList" value="submit_PharmList">Eczane Envanter Listele</Button>
