--- a/templates/PharmacyStaff/Problem/Aktivite/AktiviteList.html
+++ b/templates/PharmacyStaff/Problem/Aktivite/AktiviteList.html
@@ -23,8 +23,7 @@
           <div class="form-group">
             <input type="text" class="form-control" name="tanim" placeholder="Aktivite Tanimi">
           </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Aktivite" value="Aktivite">
-Kayıt</button>
+          <button type="submit" class="btn btn-primary btn-block" name="Aktivite" value="Aktivite">Kayıt</button>
         </form>
       </div>
     </div>
