--- a/templates/PharmacyStaff/Problem/Belirtec/BelirtecList.html
+++ b/templates/PharmacyStaff/Problem/Belirtec/BelirtecList.html
@@ -1,6 +1,6 @@
 {% extends "Pharmacy/Problem/ProblemIndex.html" %}
 {% block body %}
- <div class="row"><h3>Eczane Aktivite</h3></div>
+ <div class="row"><h3>Eczane Belirtec</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -18,13 +18,12 @@
       <div class="card card-body">
         <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
           <div class="form-group">
-            <input type="number" class="form-control" name="id" placeholder="Aktivite ID">
+            <input type="number" class="form-control" name="BelirtecID" placeholder="Belirtec ID">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="tanim" placeholder="Aktivite Tanimi">
+            <input type="text" class="form-control" name="Belirtectanimi" placeholder="Belirtec Tanımı">
           </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Aktivite" value="Aktivite">
-Kayıt</button>
+          <button type="submit" class="btn btn-primary btn-block" name="Belirtec" value="Belirtec">Kayıt</button>
         </form>
       </div>
     </div>
@@ -32,8 +31,8 @@ Kayıt</button>
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
-            <td>Aktivite ID</td>
-            <td>Aktivite Tanımı</td>
+            <td>Belirtec ID</td>
+            <td>Belirtec Tanımı</td>
             <td>İşlem</td>
           </tr>
         </thead>
