--- a/templates/PharmacyStaff/Problem/ProblemList.html
+++ b/templates/PharmacyStaff/Problem/ProblemList.html
@@ -1,6 +1,6 @@
-{% extends "Pharmacy/Problem/ProblemIndex.html" %}
+{% extends "PharmacyStaff/Problem/ProblemMudahaleIndex.html" %}
 {% block body %}
- <div class="row"><h3>Eczane Aktivite</h3></div>
+ <div class="row"><h3>Eczane Problem Şablon</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -18,13 +18,26 @@
       <div class="card card-body">
         <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
           <div class="form-group">
-            <input type="number" class="form-control" name="id" placeholder="Aktivite ID">
+            <input type="text" class="form-control" name="tcno" placeholder="TcNo">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="tanim" placeholder="Aktivite Tanimi">
+            <input type="text" class="form-control" name="name" placeholder="İsim">
           </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Aktivite" value="Aktivite">
-Kayıt</button>
+          <div class="form-group">
+            <input type="email" class="form-control" name="email" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <input type="phone" class="form-control" name="phone" placeholder="Telefon">
+          </div>
+          <div class="form-group">
+            <input type="number" class="form-control" name="id" placeholder="Eczane_ID">
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" name="pswd" placeholder="Parola">
+          </div>
+          <button class="btn btn-primary btn-block">
+            Kayıt 
+          </button>
         </form>
       </div>
     </div>
@@ -32,8 +45,12 @@ Kayıt</button>
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
-            <td>Aktivite ID</td>
-            <td>Aktivite Tanımı</td>
+            <td>TcNo</td>
+            <td>İsim</td>
+            <td>Email</td>
+            <td>Telefon</td>
+            <td>Eczane_ID</td>
+            <td>Parola</td>
             <td>İşlem</td>
           </tr>
         </thead>
@@ -42,6 +59,10 @@ Kayıt</button>
           <tr>
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
+            <td>{{row[2]}}</td>
+            <td>{{row[3]}}</td>
+            <td>{{row[4]}}</td>
+            <td>{{row[5]}}</td>
             <td width="150">
               <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
               <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
