--- a/templates/PharmacyStaff/Problem/Sinif/SinifList.html
+++ b/templates/PharmacyStaff/Problem/Sinif/SinifList.html
@@ -1,6 +1,6 @@
 {% extends "Pharmacy/Problem/ProblemIndex.html" %}
 {% block body %}
- <div class="row"><h3>Eczane Aktivite</h3></div>
+ <div class="row"><h3>Eczane Sınıf</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -16,15 +16,17 @@
       {% endif %}
       {% endwith %}
       <div class="card card-body">
-        <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
+       <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
           <div class="form-group">
-            <input type="number" class="form-control" name="id" placeholder="Aktivite ID">
+            <input type="number" class="form-control" name="SinifID" placeholder="Sinif ID">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="tanim" placeholder="Aktivite Tanimi">
+            <input type="text" class="form-control" name="SinifAdi" placeholder="Sinif Adı">
           </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Aktivite" value="Aktivite">
-Kayıt</button>
+          <div class="form-group">
+            <input type="text" class="form-control" name="AlanTipi" placeholder="Alan Tipi">
+          </div>
+          <button type="submit" class="btn btn-primary btn-block" name="Sinif" value="Sinif">Kayıt</button>
         </form>
       </div>
     </div>
@@ -32,8 +34,9 @@ Kayıt</button>
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
-            <td>Aktivite ID</td>
-            <td>Aktivite Tanımı</td>
+            <td>Sinif ID</td>
+            <td>Sinif Adı</td>
+            <td>Alan Tipi</td>
             <td>İşlem</td>
           </tr>
         </thead>
@@ -42,6 +45,10 @@ Kayıt</button>
           <tr>
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
+            <td>{{row[2]}}</td>
+            <td>{{row[3]}}</td>
+            <td>{{row[4]}}</td>
+            <td>{{row[5]}}</td>
             <td width="150">
               <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
               <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
