Mudur activities are added

--- a/templates/PharmacyStaff/Problem/ProblemMudahaleIndex.html
+++ b/templates/PharmacyStaff/Problem/ProblemMudahaleIndex.html
@@ -18,11 +18,11 @@
       <form action="{{ url_for('PharmacyStaff.ProblemMudahaleIndex')}}" method="POST" style="display: flex; justify-content: center; margin-bottom: 25px;"> 
         <button type="submit" class="btn btn-primary btn-block m-1" name="ProblemMudahale" value="ProblemMudahale" ><span aria-hidden="true">Problem Müdahale</span></button>
         <button type="submit" class="btn btn-primary btn-block m-1" name="ProblemCikti" value="ProblemCikti"><span aria-hidden="true">Problem Çıktı</span></button>
-        <button type="submit" class="btn btn-primary btn-block m-1" name="Mudahale" value="Mudahale"><span aria-hidden="true">Ilave Müdahale Detay</span></button>
-        <button type="submit" class="btn btn-primary btn-block m-1" name="Cikti" value="Cikti"><span aria-hidden="true">Ilave Çıktı Detay </span></button>
+        <button type="submit" class="btn btn-primary btn-block m-1" name="IlaveMudahaleDetay" value="IlaveMudahaleDetay"><span aria-hidden="true">Ilave Müdahale Detay</span></button>
+        <button type="submit" class="btn btn-primary btn-block m-1" name="IlaveCiktiDetay" value="IlaveCiktiDetay"><span aria-hidden="true">Ilave Çıktı Detay </span></button>
         <button type="submit" class="btn btn-primary btn-block m-1" name="PersonelProblem" value="PersonelProblem"><span aria-hidden="true">Personel Problem</span></button>
         <button type="submit" class="btn btn-primary btn-block m-1" name="ProblemCiktiDegerlendirme" value="ProblemCiktiDegerlendirme"><span aria-hidden="true">Problem Çıktı Değerlendirme</span></button>
-        <button type="submit" class="btn btn-primary btn-block m-1" name="ProblemCiktiDegerlendirme" value="ProblemDurumDegerlendirme"><span aria-hidden="true">Problem Durum Değerlendirme</span></button>
+        <button type="submit" class="btn btn-primary btn-block m-1" name="ProblemDurumDegerlendirme" value="ProblemDurumDegerlendirme"><span aria-hidden="true">Problem Durum Değerlendirme</span></button>
         <button type="submit" class="btn btn-primary btn-block m-1" name="ProblemCiktiDegerlendirme" value="CalisanProblem"><span aria-hidden="true">Calışan Problem</span></button>
       </form>
       {% block body %}
