--- a/templates/PharmacyStaff/Problem/IlaveCiktiDetay/IlaveCiktiDetayList.html
+++ b/templates/PharmacyStaff/Problem/IlaveCiktiDetay/IlaveCiktiDetayList.html
@@ -1,6 +1,6 @@
-{% extends "Pharmacy/Problem/ProblemIndex.html" %}
+{% extends "PharmacyStaff/Problem/ProblemMudahaleIndex.html" %}
 {% block body %}
- <div class="row"><h3>Eczane Belirtec</h3></div>
+ <div class="row"><h3>Ilave Cikti Detay</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -15,24 +15,18 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
-      <div class="card card-body">
-        <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
-          <div class="form-group">
-            <input type="number" class="form-control" name="BelirtecID" placeholder="Belirtec ID">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="Belirtectanimi" placeholder="Belirtec Tanımı">
-          </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Belirtec" value="Belirtec">Kayıt</button>
-        </form>
-      </div>
-    </div>
-    <div class="col-md-8">
+      <div class="col-md-8">
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
-            <td>Belirtec ID</td>
-            <td>Belirtec Tanımı</td>
+            <td>Problem ID</td>
+            <td>Alan ID</td>
+            <td>SinifI ID</td>
+            <td>Mudahele ID</td>
+            <td>Aktivite ID</td>
+            <td>Sira</td>
+            <td>EkleyenKullanici Adi</td>
+            <td>EklenmeTarihi</td>
             <td>İşlem</td>
           </tr>
         </thead>
@@ -41,6 +35,12 @@
           <tr>
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
+            <td>{{row[2]}}</td>
+            <td>{{row[3]}}</td>
+            <td>{{row[4]}}</td>
+            <td>{{row[5]}}</td>
+            <td>{{row[6]}}</td>
+            <td>{{row[7]}}</td>
             <td width="150">
               <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
               <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
