--- a/templates/PharmacyStaff/Problem/IlaveMudahaleDetay/IlaveMudahaleDetayList.html
+++ b/templates/PharmacyStaff/Problem/IlaveMudahaleDetay/IlaveMudahaleDetayList.html
@@ -1,6 +1,6 @@
 {% extends "PharmacyStaff/Problem/ProblemMudahaleIndex.html" %}
 {% block body %}
- <div class="row"><h3>Problem Müdahale</h3></div>
+ <div class="row"><h3>Eczane Mudahale</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -15,32 +15,18 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
-      <div class="card card-body">
-        <form action="{{url_for('PharmacyStaff.add_ProblemTemplate')}}" method="POST">
-          <div class="form-group">
-            <input type="number" class="form-control" name="alanID" placeholder="Alan ID">
-          </div>
-          <div class="form-group">
-            <input type="number" class="form-control" name="sinifID" placeholder="Sınıf ID">
-          </div>
-          <div class="form-group">
-            <input type="number" class="form-control" name="mudahaleID" placeholder="Müdahale ID">
-          </div>
-          <div class="form-group">
-            <input type="number" class="form-control" name="problemID" placeholder="Problem ID">
-          </div>
-          <button type="submit" class="btn btn-primary btn-block" name="ProblemMudahale" value="ProblemMudahale">Kayıt</button>
-        </form>
-      </div>
-    </div>
     <div class="col-md-8">
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
+            <td>Problem ID</td>
             <td>Alan ID</td>
-            <td>Sınıf ID</td>
-            <td>Müdahale ID</td>
-            <td>Promlem ID</td>
+            <td>SinifI ID</td>
+            <td>Mudahele ID</td>
+            <td>Aktivite ID</td>
+            <td>Sira</td>
+            <td>EkleyenKullanici Adi</td>
+            <td>EklenmeTarihi</td>
             <td>İşlem</td>
           </tr>
         </thead>
@@ -51,6 +37,10 @@
             <td>{{row[1]}}</td>
             <td>{{row[2]}}</td>
             <td>{{row[3]}}</td>
+            <td>{{row[4]}}</td>
+            <td>{{row[5]}}</td>
+            <td>{{row[6]}}</td>
+            <td>{{row[7]}}</td>
             <td width="150">
               <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
               <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
