--- a/templates/PharmacyStaff/Problem/PersonelProblem/PersonelProblemList.html
+++ b/templates/PharmacyStaff/Problem/PersonelProblem/PersonelProblemList.html
@@ -1,6 +1,6 @@
-{% extends "Pharmacy/Problem/ProblemIndex.html" %}
+{% extends "PharmacyStaff/Problem/ProblemMudahaleIndex.html" %}
 {% block body %}
- <div class="row"><h3>Eczane Sınıf</h3></div>
+ <div class="row"><h3>Personel İle Problem Eşlemesi</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -16,17 +16,14 @@
       {% endif %}
       {% endwith %}
       <div class="card card-body">
-       <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
+        <form action="{{url_for('PharmacyStaff.add_ProblemTemplate')}}" method="POST">
           <div class="form-group">
-            <input type="number" class="form-control" name="SinifID" placeholder="Sinif ID">
+            <input type="number" class="form-control" name="ProblemID" placeholder="Problem ID">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="SinifAdi" placeholder="Sinif Adı">
+            <input type="text" class="form-control" name="tcno" placeholder="Personel TcNo">
           </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="AlanTipi" placeholder="Alan Tipi">
-          </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Sinif" value="Sinif">Kayıt</button>
+          <button type="submit" class="btn btn-primary btn-block" name="PersonelProblem" value="PersonelProblem">Kayıt</button>
         </form>
       </div>
     </div>
@@ -34,10 +31,8 @@
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
-            <td>Sinif ID</td>
-            <td>Sinif Adı</td>
-            <td>Alan Tipi</td>
-            <td>İşlem</td>
+            <td>Problem ID</td>
+            <td>Problem Tc No</td>
           </tr>
         </thead>
         <tbody>
@@ -45,10 +40,6 @@
           <tr>
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
-            <td>{{row[2]}}</td>
-            <td>{{row[3]}}</td>
-            <td>{{row[4]}}</td>
-            <td>{{row[5]}}</td>
             <td width="150">
               <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
               <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
