--- a/templates/PharmacyStaff/Problem/ProblemCikti/ProblemCiktiList.html
+++ b/templates/PharmacyStaff/Problem/ProblemCikti/ProblemCiktiList.html
@@ -1,6 +1,6 @@
-{% extends "Pharmacy/Problem/ProblemIndex.html" %}
+{% extends "PharmacyStaff/Problem/ProblemMudahaleIndex.html" %}
 {% block body %}
- <div class="row"><h3>Eczane Aktivite</h3></div>
+ <div class="row"><h3>Problem Çıktı</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -16,14 +16,20 @@
       {% endif %}
       {% endwith %}
       <div class="card card-body">
-        <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
+       <form action="{{url_for('PharmacyStaff.add_ProblemTemplate')}}" method="POST">
           <div class="form-group">
-            <input type="number" class="form-control" name="id" placeholder="Aktivite ID">
+            <input type="number" class="form-control" name="alanID" placeholder="Alan ID">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="tanim" placeholder="Aktivite Tanimi">
+            <input type="number" class="form-control" name="sinifID" placeholder="Sınıf ID">
           </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Aktivite" value="Aktivite">Kayıt</button>
+          <div class="form-group">
+            <input type="number" class="form-control" name="ciktiID" placeholder="Çıktı ID">
+          </div>
+          <div class="form-group">
+            <input type="number" class="form-control" name="problemID" placeholder="Problem ID">
+          </div>
+          <button type="submit" class="btn btn-primary btn-block" name="ProblemCikti" value="ProblemCikti">Kayıt</button>
         </form>
       </div>
     </div>
@@ -31,8 +37,10 @@
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
-            <td>Aktivite ID</td>
-            <td>Aktivite Tanımı</td>
+            <td>Alan ID</td>
+            <td>Sınıf ID</td>
+            <td>Çıktı ID</td>
+            <td>Promlem ID</td>
             <td>İşlem</td>
           </tr>
         </thead>
@@ -41,6 +49,8 @@
           <tr>
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
+            <td>{{row[2]}}</td>
+            <td>{{row[3]}}</td>
             <td width="150">
               <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
               <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
