--- a/templates/PharmacyStaff/Problem/ProblemCiktiDegerlendirme/ProblemCiktiDegerlendirmeList.html
+++ b/templates/PharmacyStaff/Problem/ProblemCiktiDegerlendirme/ProblemCiktiDegerlendirmeList.html
@@ -1,6 +1,6 @@
-{% extends "Pharmacy/Problem/ProblemIndex.html" %}
+{% extends "PharmacyStaff/Problem/ProblemMudahaleIndex.html" %}
 {% block body %}
- <div class="row"><h3>Eczane Mudahale</h3></div>
+ <div class="row"><h3>Problem Çıktı Değerlendirme</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -15,32 +15,14 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
-      <div class="card card-body">
-        <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
-          <div class="form-group">
-            <input type="number" class="form-control" name="AlanID" placeholder="Alan ID">
-          </div>
-          <div class="form-group">
-            <input type="number" class="form-control" name="SinifID" placeholder="Sinif ID">
-          </div>
-          <div class="form-group">
-            <input type="number" class="form-control" name="MudaheleID" placeholder="Mudahele ID">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="MudahaleAdi" placeholder="Müdahale Adı">
-          </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Mudahale" value="Mudahale">Kayıt</button>
-        </form>
-      </div>
-    </div>
-    <div class="col-md-8">
+      <div class="col-md-8">
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
-            <td>Alan ID</td>
-            <td>Sinif ID</td>
-            <td>Mudahele ID</td>
-            <td>Mudahele Tipi</td>
+            <td>Problem ID</td>
+            <td>Belirtec ID</td>
+            <td>Skor</td>
+            <td>Skor Tarihi</td>
             <td>İşlem</td>
           </tr>
         </thead>
@@ -51,8 +33,6 @@
             <td>{{row[1]}}</td>
             <td>{{row[2]}}</td>
             <td>{{row[3]}}</td>
-            <td>{{row[4]}}</td>
-            <td>{{row[5]}}</td>
             <td width="150">
               <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
               <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
