--- a/templates/PharmacyStaff/Problem/ProblemDurumDegerlendirme/ProblemDurumDegerlendirmeList.html
+++ b/templates/PharmacyStaff/Problem/ProblemDurumDegerlendirme/ProblemDurumDegerlendirmeList.html
@@ -1,6 +1,6 @@
-{% extends "Pharmacy/Problem/ProblemIndex.html" %}
+{% extends "PharmacyStaff/Problem/ProblemMudahaleIndex.html" %}
 {% block body %}
- <div class="row"><h3>Eczane Cikti</h3></div>
+ <div class="row"><h3>Problem Durum Değerlendirme</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -15,32 +15,19 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
-      <div class="card card-body">
-        <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
-          <div class="form-group">
-            <input type="number" class="form-control" name="AlanID" placeholder="Alan ID">
-          </div>
-          <div class="form-group">
-            <input type="number" class="form-control" name="SinifID" placeholder="Sinif ID">
-          </div>
-          <div class="form-group">
-            <input type="number" class="form-control" name="CiktiID" placeholder="Cikti ID">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="CiktiAdi" placeholder="Cikti Adı">
-          </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Cikti" value="Cikti">Kayıt</button>
-        </form>
-      </div>
-    </div>
     <div class="col-md-8">
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
-            <td>Alan ID</td>
-            <td>Sinif ID</td>
-            <td>Cikti ID</td>
-            <td>Cikti Adı</td>
+            <td>Problem ID</td>
+            <td>YeniProblem ID</td>
+            <td>YeniProblem Tanımı</td>
+            <td>Mudahele ID</td>
+            <td>Yeni Hedef</td>
+            <td>Onceki Problem Skoru</td>
+            <td>Tahmin Edilen Problem Skoru</td>
+            <td>Degerlendirme Tarihi</td>
+            <td>Degerlendiren Kullanici Adi</td>
             <td>İşlem</td>
           </tr>
         </thead>
@@ -51,6 +38,11 @@
             <td>{{row[1]}}</td>
             <td>{{row[2]}}</td>
             <td>{{row[3]}}</td>
+            <td>{{row[4]}}</td>
+            <td>{{row[5]}}</td>
+            <td>{{row[6]}}</td>
+            <td>{{row[7]}}</td>
+            <td>{{row[8]}}</td>
             <td width="150">
               <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
               <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
