Read Me is updated

--- a/templates/PharmacyStaff/PharmacyStaffMission.html
+++ b/templates/PharmacyStaff/PharmacyStaffMission.html
@@ -17,10 +17,9 @@
                 <main class="Missions">
                     <div class="Mission__profile">
                     <form action="{{ url_for('PharmacyStaff.PharmacyActions')}}" method="POST">
-                        <Button class="Mission__ProblemList" type="submit" name="submit_problemList" value="submit_problemList">Aktif Problemleri</Button>
+                        <Button class="Mission__ProblemList" type="submit" name="submit_problemList" value="submit_problemList">Aktif Problemler</Button>
                         <Button class="Mission__ProblemAdd" type="submit" name="submit_problemMudahale" value="submit_problemMudahale">Problem Müdahale</Button>
                         <Button class="Mission__PharmList" type="submit" name="submit_PharmList" value="submit_PharmList">Eczane Envanter Listele</Button>
-                        <Button class="Mission__Persenoel_CRUD" type="submit" name="submit_Personel_CRUD" value="submit_Personel_CRUD">Personel CRUD</Button>
                     </form> 
                     </div>
                 </main>
