--- a/templates/PharmacistAdmin.html
+++ b/templates/PharmacistAdmin.html
@@ -17,8 +17,8 @@
                 <main class="Missions">
                     <div class="Mission__profile">
                     <form action="{{ url_for('PharmacyMission.PharmacyActions')}}" method="POST">
-                        <Button class="Mission__ProblemList" type="submit" name="submit_problemList" value="submit_problemList">Aktif Problemleri</Button>
-                        <Button class="Mission__ProblemAdd" type="submit" name="submit_problemAdd" value="submit_problemAdd">Problem Oluştur</Button>
+                        <Button class="Mission__ProblemList" type="submit" name="submit_detay" value="submit_detay">Problem Detay Eşleme</Button>
+                        <Button class="Mission__ProblemAdd" type="submit" name="submit_problemAdd" value="submit_problemAdd">Problem Müdahale Şablonu</Button>
                         <Button class="Mission__PharmList" type="submit" name="submit_PharmList" value="submit_PharmList">Eczane Envanter Listele</Button>
                         <Button class="Mission__Persenoel_CRUD" type="submit" name="submit_Personel_CRUD" value="submit_Personel_CRUD">Personel CRUD</Button>
                     </form> 
