--- a/templates/PharmacyStaff/Problem/ProblemMudahale/ProblemMudahaleList.html
+++ b/templates/PharmacyStaff/Problem/ProblemMudahale/ProblemMudahaleList.html
@@ -40,7 +40,7 @@
             <td>Alan ID</td>
             <td>Sınıf ID</td>
             <td>Müdahale ID</td>
-            <td>Promlem ID</td>
+            <td>Problem ID</td>
             <td>İşlem</td>
           </tr>
         </thead>
