--- a/templates/PharmacyWelcomePage.html
+++ b/templates/PharmacyWelcomePage.html
@@ -15,6 +15,9 @@
         .login label{
             color: #AB050B;
         }
+        div .alert{
+            color: #FFF;
+        }
     </style>
 {% endblock %}
 {% block headerName %}
@@ -39,5 +42,5 @@
             <input type="number" name="tc" placeholder="Eczacı TC No" required="">
             <input type="password" name="pswd" placeholder="Şifre" required="">
             <button class="submitButton" type="submit" name="submit_log">Giriş Yap</button>
-    </form>
+        </form>
 {% endblock %}
