--- a/templates/PharmacistStaff.html
+++ b/templates/PharmacistStaff.html
@@ -12,7 +12,7 @@
         <div class="container"> 
             <div class="header">
                 <h1 class="headerName">İLAÇ SEPETİ'NE HOŞGELDİNİZ</h1>
-                <h3 class="signHeader">Eczane Personel Giriş</h3>
+                <h3 class="signHeader">Eczane Çalışan Giriş</h3>
             </div>
             <div class="main">
                 <div class="login">
@@ -20,9 +20,19 @@
                         <label for="chk" aria-hidden="true">Giriş Yap</label>
                         <input type="number" name="id" placeholder="Eczane ID" required="">
                         <input type="number" name="tcno" placeholder="TC No " required="">
+                        <input type="number" name="status" placeholder="Statü " required="">
                         <input type="password" name="pswd" placeholder="Şifre" required="">
                     <button class="submitButton" type="submit" name="submit_log">Giriş Yap</button>
                 </div>
+                {% with messages = get_flashed_messages()  %}
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <h6>{{ message }}</h6>
+                </div>
+                {% endfor %}
+                {% endif %}
+                {% endwith %}
             </div>
         </div>
     </body>
