--- a/templates/Pharmacy/PharmacyStaffEdit.html
+++ b/templates/Pharmacy/PharmacyStaffEdit.html
@@ -3,27 +3,30 @@
   <div class="row">
     <div class="col-md-4 offset-md-4">
       <div class="card card-body">
-        <form action="/update/{{staff.tcno}}" method="POST">
+        <form action="/Pharmacy_Admin/update/{{staff.tcno}}" method="POST">
           <div class="form-group">
             <input type="text" class="form-control" name="tcno" value="{{staff.tcno}}">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="name" value="staff.isim">
+            <input type="text" class="form-control" name="name" value="{{staff.isim}}">
           </div>
           <div class="form-group">
-            <input type="email" class="form-control" name="email" value="staff.email">
+            <input type="email" class="form-control" name="email" value="{{staff.email}}">
           </div>
           <div class="form-group">
-            <input type="phone" class="form-control" name="phone" value="staff.telefon">
+            <input type="phone" class="form-control" name="phone" value="{{staff.telefon}}">
           </div>
           <div class="form-group">
-            <input type="number" class="form-control" name="id" value="staff.eczane_id">
+            <input type="number" class="form-control" name="id" value="{{staff.eczane_id}}">
           </div>
           <div class="form-group">
-            <input type="password" class="form-control" name="pswd" value="staff.sifre">
+            <input type="number" class="form-control" name="status" value="{{staff.status}}">
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" name="pswd" value="{{staff.sifre}}">
           </div>
           <button class="btn btn-primary btn-block">
-            Kayıt 
+            Güncelle 
           </button>
         </form>
       </div>
