--- a/templates/Pharmacy/Problem/Aktivite/AktiviteList.html
+++ b/templates/Pharmacy/Problem/Aktivite/AktiviteList.html
@@ -23,8 +23,7 @@
           <div class="form-group">
             <input type="text" class="form-control" name="tanim" placeholder="Aktivite Tanimi">
           </div>
-          <button type="submit" class="btn btn-primary btn-block" name="Aktivite" value="Aktivite">
-Kayıt</button>
+          <button type="submit" class="btn btn-primary btn-block" name="Aktivite" value="Aktivite">Kayıt</button>
         </form>
       </div>
     </div>
@@ -43,8 +42,8 @@ Kayıt</button>
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
             <td width="150">
-              <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
-              <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
+              <a href="/Pharmacy_Admin/Aktiviteler/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
+              <a href="/Pharmacy_Admin/Aktiviteler/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
             </td>
           </tr>
           {% endfor %}
