--- a/templates/Pharmacy/Problem/Alan/AlanList.html
+++ b/templates/Pharmacy/Problem/Alan/AlanList.html
@@ -47,8 +47,8 @@
             <td>{{row[1]}}</td>
             <td>{{row[2]}}</td>
             <td width="150">
-              <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
-              <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
+              <a href="/Pharmacy_Admin/Alan/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
+              <a href="/Pharmacy_Admin/Alan/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
             </td>
           </tr>
           {% endfor %}
