--- a/templates/Pharmacy/Problem/Belirtec/BelirtecList.html
+++ b/templates/Pharmacy/Problem/Belirtec/BelirtecList.html
@@ -42,8 +42,8 @@
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
             <td width="150">
-              <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
-              <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
+              <a href="/Pharmacy_Admin/Belirtecler/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
+              <a href="/Pharmacy_Admin/Belirtecler/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
             </td>
           </tr>
           {% endfor %}
