--- a/templates/Pharmacy/Problem/Cikti/CiktiEdit.html
+++ b/templates/Pharmacy/Problem/Cikti/CiktiEdit.html
@@ -3,28 +3,20 @@
   <div class="row">
     <div class="col-md-4 offset-md-4">
       <div class="card card-body">
-        <form action="/template/update/{{temp.id}}" method="POST">
+        <form action="/Pharmacy_Admin/cikti/update/{{temp.id}}" method="POST">
           <div class="form-group">
-            <input type="text" class="form-control" name="tcno" value="{{temp}}">
+            <input type="number" class="form-control" name="AlanID" value="{{temp.alanid}}">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="name" value="{{temp}}">
+            <input type="number" class="form-control" name="SinifID" value="{{temp.sinifid}}">
           </div>
           <div class="form-group">
-            <input type="email" class="form-control" name="email" value="{{temp}}">
+            <input type="number" class="form-control" name="CiktiID" value="{{temp.ciktiid}}">
           </div>
           <div class="form-group">
-            <input type="phone" class="form-control" name="phone" value="{{temp}}">
+            <input type="text" class="form-control" name="CiktiAdi" value="{{temp.ciktiadi}}">
           </div>
-          <div class="form-group">
-            <input type="number" class="form-control" name="id" value="{{temp}}">
-          </div>
-          <div class="form-group">
-            <input type="password" class="form-control" name="pswd" value="{{temp}}">
-          </div>
-          <button class="btn btn-primary btn-block">
-            Kayıt 
-          </button>
+          <button type="submit" class="btn btn-primary btn-block" name="Cikti" value="Cikti">Kayıt</button>
         </form>
       </div>
     </div>
