--- a/templates/Pharmacy/Problem/Cikti/CiktiList.html
+++ b/templates/Pharmacy/Problem/Cikti/CiktiList.html
@@ -52,8 +52,8 @@
             <td>{{row[2]}}</td>
             <td>{{row[3]}}</td>
             <td width="150">
-              <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
-              <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
+              <a href="/Pharmacy_Admin/Cikti/edit/{{row[0]}}/{{row[1]}}/{{row[2]}}" class="btn btn-secondary btn-sm">Güncelle</a>
+              <a href="/Pharmacy_Admin/Cikti/delete/{{row[0]}}/{{row[1]}}/{{row[2]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
             </td>
           </tr>
           {% endfor %}
