--- a/templates/Pharmacy/Problem/Problem/ProblemList.html
+++ b/templates/Pharmacy/Problem/Problem/ProblemList.html
@@ -1,6 +1,6 @@
-{% extends "PharmacyStaff/Problem/ProblemMudahaleIndex.html" %}
+{% extends "Pharmacy/Problem/ProblemIndex.html" %}
 {% block body %}
- <div class="row"><h3>Personel İle Problem Eşlemesi</h3></div>
+ <div class="row"><h3>Eczane Sınıf</h3></div>
   <div class="row">
     <div class="col-md-4">
       {% with messages = get_flashed_messages()  %}
@@ -16,14 +16,17 @@
       {% endif %}
       {% endwith %}
       <div class="card card-body">
-        <form action="{{url_for('PharmacyStaff.add_ProblemTemplate')}}" method="POST">
+       <form action="{{url_for('PharmacyMission.add_ProblemTemplate')}}" method="POST">
           <div class="form-group">
             <input type="number" class="form-control" name="ProblemID" placeholder="Problem ID">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="tcno" placeholder="Personel TcNo">
+            <input type="text" class="form-control" name="BirimID" placeholder="Birim ID">
           </div>
-          <button type="submit" class="btn btn-primary btn-block" name="PersonelProblem" value="PersonelProblem">Kayıt</button>
+          <div class="form-group">
+            <input type="text" class="form-control" name="tarih" placeholder="Eşleşme Tarihi">
+          </div>
+          <button type="submit" class="btn btn-primary btn-block" name="Problem " value="Problem">Kayıt</button>
         </form>
       </div>
     </div>
@@ -32,7 +35,9 @@
         <thead>
           <tr>
             <td>Problem ID</td>
-            <td>Personel Tc No</td>
+            <td>Birim ID</td>
+            <td>Eşleşme Tarihi</td>
+            <td>İşlem</td>
           </tr>
         </thead>
         <tbody>
@@ -40,9 +45,10 @@
           <tr>
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
+            <td>{{row[2]}}</td>
             <td width="150">
-              <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
-              <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
+              <a href="/Pharmacy_Admin/Sinif/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
+              <a href="/Pharmacy_Admin/Sinif/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
             </td>
           </tr>
           {% endfor %}
