--- a/templates/Pharmacy/ProblemDetay/ProblemDetayIndex.html
+++ b/templates/Pharmacy/ProblemDetay/ProblemDetayIndex.html
@@ -12,17 +12,12 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-      <h1 class="navbar-brand">Eczane Admin Şablon</h1>
+      <h1 class="navbar-brand">Eczane Admin Detay Şablon</h1>
     </nav>
     <div class="container pt-4">
-      <form action="{{ url_for('PharmacyMission.ProblemIndex')}}" method="POST" style="display: flex; margin-bottom: 25px;"> 
-        <button type="submit" class="btn btn-primary btn-block m-1" name="Alan" value="Alan" ><span aria-hidden="true">Alanlar</span></button>
-        <button type="submit" class="btn btn-primary btn-block m-1" name="Sinif" value="Sinif"><span aria-hidden="true">Sınıflar</span></button>
-        <button type="submit" class="btn btn-primary btn-block m-1" name="Mudahale" value="Mudahale"><span aria-hidden="true">Müdahale</span></button>
-        <button type="submit" class="btn btn-primary btn-block m-1" name="Aktivite" value="Aktivite"><span aria-hidden="true">Aktiviteler</span></button>
-        <button type="submit" class="btn btn-primary btn-block m-1" name="Belirtec" value="Belirtec"><span aria-hidden="true">Belirteçler</span></button>
-        <button type="submit" class="btn btn-primary btn-block m-1" name="Cikti" value="Cikti"><span aria-hidden="true">Çıktı</span></button>
-        <button type="submit" class="btn btn-primary btn-block m-1" name="Problem" value="Problem"><span aria-hidden="true">Problem</span></button>
+      <form action="{{ url_for('PharmacyMission.DetayIndex')}}" method="POST" style="display: flex; margin-bottom: 25px;"> 
+        <button href="Pharmacy_Admin/MudahaleDetay" type="submit" class="btn btn-primary btn-block m-1" name="MudahaleDetay" value="MudahaleDetay" ><span aria-hidden="true">Müdahale Detay</span></button>
+        <button href="Pharmacy_Admin/CiktiDetay" type="submit" class="btn btn-primary btn-block m-1" name="CiktiDetay" value="CiktiDetay"><span aria-hidden="true">Çıktı Detay</span></button>
       </form>
       {% block body %}
       {% endblock %}
