--- a/templates/PharmacyStaff/Problem/IlaveCiktiDetay/IlaveCiktiDetayList.html
+++ b/templates/PharmacyStaff/Problem/IlaveCiktiDetay/IlaveCiktiDetayList.html
@@ -19,11 +19,12 @@
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
+          
             <td>Problem ID</td>
             <td>Alan ID</td>
             <td>SinifI ID</td>
             <td>Mudahele ID</td>
-            <td>Aktivite ID</td>
+            <td>Belirtec ID</td>
             <td>Sira</td>
             <td>EkleyenKullanici Adi</td>
             <td>EklenmeTarihi</td>
@@ -33,16 +34,16 @@
         <tbody>
           {% for row in list_users %}
           <tr>
+            <td>{{row[3]}}</td>
             <td>{{row[0]}}</td>
             <td>{{row[1]}}</td>
             <td>{{row[2]}}</td>
-            <td>{{row[3]}}</td>
-            <td>{{row[4]}}</td>
-            <td>{{row[5]}}</td>
-            <td>{{row[6]}}</td>
-            <td>{{row[7]}}</td>
+            <td> <input type="number" class="form-control" name="belirtecid" value="{{row[4]}}"></td>
+            <td> <input type="number" class="form-control" name="sira" value="{{row[5]}}"></td>
+            <td> <input type="number" class="form-control" name="ekleyenkullanici" value="{{row[6]}}"></td>
+            <td> <input type="number" class="form-control" name="eklenmetarihi" value="{{row[7]}}"></td>
             <td width="150">
-              <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
+              <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Ekle</a>
               <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
             </td>
           </tr>
