--- a/templates/PharmacyStaff/Problem/IlaveMudahaleDetay/IlaveMudahaleDetayList.html
+++ b/templates/PharmacyStaff/Problem/IlaveMudahaleDetay/IlaveMudahaleDetayList.html
@@ -21,30 +21,32 @@
           <tr>
             <td>Problem ID</td>
             <td>Alan ID</td>
-            <td>SinifI ID</td>
-            <td>Mudahele ID</td>
+            <td>Sinif ID</td>
+            <td>Mudahale ID</td>
             <td>Aktivite ID</td>
-            <td>Sira</td>
-            <td>EkleyenKullanici Adi</td>
-            <td>EklenmeTarihi</td>
+            <td>Sıra</td>
+            <td>Ekleyen Kullanici</td>
+            <td>Eklenme Tarihi</td>
             <td>İşlem</td>
           </tr>
         </thead>
         <tbody>
           {% for row in list_users %}
           <tr>
-            <td>{{row[0]}}</td>
-            <td>{{row[1]}}</td>
-            <td>{{row[2]}}</td>
-            <td>{{row[3]}}</td>
-            <td>{{row[4]}}</td>
-            <td>{{row[5]}}</td>
-            <td>{{row[6]}}</td>
-            <td>{{row[7]}}</td>
+          <form action="{{url_for('PharmacyStaff.IlaveMudahaleDetay')}}" method="POST">
+            <td> <input style="width:50px" name="problemid" value="{{row[3]}}" readonly></td>
+            <td> <input style="width:50px" name="alanid" value="{{row[0]}}" readonly></td>
+            <td> <input style="width:50px" name="sinifid" value="{{row[1]}}" readonly></td>
+            <td> <input style="width:50px" name="mudahaleid" value="{{row[2]}}" readonly></td>
+            <td> <input type="number" class="form-control" name="aktiviteid" value="{{row[4]}}"></td>
+            <td> <input type="number" class="form-control" name="sira" value="{{row[5]}}"></td>
+            <td> <input type="number" class="form-control" name="ekleyenkullanici" value="{{row[6]}}"></td>
+            <td> <input type="number" class="form-control" name="eklenmetarihi" value="{{row[7]}}"></td>
             <td width="150">
-              <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
-              <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
+              <Button type="submit" class="btn btn-secondary btn-sm">Ekle</Button>
+              <a href="/Pharmacy_Admin/mudahaledetay/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
             </td>
+          </form>
           </tr>
           {% endfor %}
         </tbody>
