--- a/templates/PharmacyStaff/Problem/ProblemCiktiDegerlendirme/ProblemCiktiDegerlendirmeList.html
+++ b/templates/PharmacyStaff/Problem/ProblemCiktiDegerlendirme/ProblemCiktiDegerlendirmeList.html
@@ -2,20 +2,7 @@
 {% block body %}
  <div class="row"><h3>Problem Çıktı Değerlendirme</h3></div>
   <div class="row">
-    <div class="col-md-4">
-      {% with messages = get_flashed_messages()  %}
-      {% if messages %}
-      {% for message in messages %}
-      <div class="alert alert-success alert-dismissible fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      {% endfor %}
-      {% endif %}
-      {% endwith %}
-      <div class="col-md-8">
+    <div class="col-md-8">
       <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
           <tr>
@@ -29,14 +16,16 @@
         <tbody>
           {% for row in list_users %}
           <tr>
-            <td>{{row[0]}}</td>
-            <td>{{row[1]}}</td>
-            <td>{{row[2]}}</td>
-            <td>{{row[3]}}</td>
-            <td width="150">
-              <a href="/edit/{{row[0]}}" class="btn btn-secondary btn-sm">Güncelle</a>
-              <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
+          <form action="{{url_for('PharmacyStaff.add_ProblemTemplate')}}" method="POST">
+            <td> <input style="width:50px" name="problemid" value="{{row[0]}}" readonly></td>
+            <td> <input style="width:50px" name="belirtecid" value="{{row[1]}}" readonly></td>
+            <td> <input type="number" class="form-control" name="skor" value="skor"></td>
+            <td> <input type="date" class="form-control" name="skortarihi" value="skortarihi"></td>
+            <td style="width: 150px;">
+              <Button type="submit" class="btn btn-secondary btn-sm" name="add_skor" value="add_skor">Ekle</Button>
+              <a href="/Pharmacy_Admin/mudahaledetay/delete/{{row[0]}}" class="btn btn-danger btn-delete btn-sm">Sil</a>
             </td>
+          </form>
           </tr>
           {% endfor %}
         </tbody>
