--- a/templates/PharmacyStaff/PharmacyStaffMission.html
+++ b/templates/PharmacyStaff/PharmacyStaffMission.html
@@ -12,7 +12,7 @@
     <div class="container"> 
         <div class="main">
                 <header>
-                    <h1 class="Mission__title"><span class="Mission__title_Span">Eczane Personel</span></h1>
+                    <h1 class="Mission__title"><span class="Mission__title_Span">Eczane Müdür</span></h1>
                 </header>
                 <main class="Missions">
                     <div class="Mission__profile">
