--- a/templates/Pharmacy/EnvanterList/PharmacyStockList.html
+++ b/templates/Pharmacy/EnvanterList/PharmacyStockList.html
@@ -1,6 +1,6 @@
 {% extends "Pharmacy/EnvanterList/PharmacyStockListIndex.html" %}
 {% block body %}
- <div class="row"><h3>Problem Çıktı Detay</h3></div>
+ <div class="row"><h3>Problem Müdahale Detay</h3></div>
   <div class="row">
     <div class="col-md-8">
       <table id="example" class="table table-striped table-bordered" style="width:100%">
